libycp/testsuite/tests/errors/pathbug.ycp
{

    // converts list of strings to path
    global define path list2path (list strs)
    {
        path p = .;
        if (p != .)
        {
            // can this ever happen? it does :(
            y2error("this is very strange, p is %1", p);
        }
        foreach (any e, strs, { p = add (p, topath(e)); });
        return p;
    }

    return list2path(["a"]) + list2path(["b"]);
}
